--- a/app/code/Oceanpayment/Wechat/view/frontend/templates/payment/redirect.phtml
+++ b/app/code/Oceanpayment/Wechat/view/frontend/templates/payment/redirect.phtml
@@ -17,7 +17,7 @@
 <?php echo $block->getCheckoutForm(); ?>
 
 
-<?php if($block->getPayMode() == 'iframe'){?>
+<?php if($block->getPayMode() == 'iframe' && !$block->getIsMobile()){?>
 
 <iframe width="100%" height="700px" scrolling="auto" name="iframe_checkout" id="iframe_checkout" style="border:none; margin: 0 auto; overflow:auto;"></iframe>
 <script type="text/javascript">
@@ -27,7 +27,7 @@
 	document.payment_checkout.submit();
 </script>
 
-<?php }elseif($block->getPayMode() == 'redirect'){?>
+<?php }else{?>
 
 <p style="font: 16px; padding: 0px; text-align: center; margin: 100px auto 0px; width: 90%;"><?php echo __('Processing, please do not click the refresh button.'); ?></p>
 <script type="text/javascript">
