--- a/app/code/Oceanpayment/GooglePay/view/frontend/web/css/styles.css
+++ b/app/code/Oceanpayment/GooglePay/view/frontend/web/css/styles.css
@@ -1,6 +1,6 @@
 
 .payment-method div.payment_logo_oceanpaymentgooglepay {
-    background:url(../images/payment_logo.png) no-repeat;
+    background:url(../images/payment_logo.svg) no-repeat;
     height:100px;
 }
 
